# lusee-faraday

./: .gitignore  Untitled1.ipynb  beam_comparison.ipynb  faraday.ipynb  phase_resolve.ipynb  point_source.ipynb  setup.cfg  vis_sim.py  wmap_sky-narrow_beam.ipynb  wmap_sky-no_spec.ipynb  wmap_sky.ipynb
faraday/: __init__.py  beam.py  faraday.py  rotations.py  sim.py  sky.py
notebooks/: analytic_comparison.ipynb  figures.ipynb  moon_rotations.ipynb  paper_figures.ipynb  point_source.ipynb  point_source_old.ipynb  vis_sim.py  wmap_sky.ipynb
notebooks/old_notebooks/: point_source.ipynb  wmap_sky.ipynb
