[metadata]
name = faraday
version = 0.0.1
description = A package for simulating Faraday rotation in radio interferometric visibilities.
long_description = file: README.md
author = Christian Hellum Bye
author_email = chbye@berkeley.edu
license = MIT
url = https://github.com/christianhbye/faraday
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy


[options]
python_requires = >= 3.8
packages=find:
install_requires =
    astropy
    healpy
    jupyter
    lunarsky
    matplotlib
    numpy <= 1.23
    pygdsm

[options.extras_require]
dev = 
    black
    build
    flake8
    pytest
    pytest-cov
    twine

[flake8]
ignore = E203, W503
per-file-ignores =
    faraday/__init__.py:F401
max-line-length = 79
